--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,8 @@ services:
     restart: always
     volumes:
       - ./data/db:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=scim
-      - POSTGRES_USER=scim
-      - POSTGRES_PASSWORD=123456
-    #ports:
-    #  - "5432:5432"
+    env_file:
+      - .env
 
   server:
     build:
@@ -18,12 +14,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./src/:/home/
-    environment:
-      - DBNAME=scim
-      - DBUSER=scim
-      - DBPASSWORD=123456
-      - DBHOST=db
-      - API_BEARER=12345678
+    env_file:
+      - .env
     ports:
       - "127.0.0.1:5000:5000"
     command: python3 app.py
@@ -34,9 +26,7 @@ services:
     volumes:
       - ./data/pgadmin/servers.json:/pgadmin4/servers.json
       - ./data/pgadmin/data:/var/lib/pgadmin
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@example.com
-      - PGADMIN_DEFAULT_PASSWORD=pgadminpass
-      - PGADMIN_LISTEN_ADDRESS=0.0.0.0
+    env_file:
+      - .env
     ports:
       - "127.0.0.1:7000:80"
