switch to uwsgi server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ services:
       - .env
     ports:
       - "127.0.0.1:5000:5000"
-    command: python3 app.py
+    depends_on:
+      - "db"
+    command: uwsgi --http 0.0.0.0:5000 --master -p 4 -w wsgi:app
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -30,3 +32,5 @@ services:
       - .env
     ports:
       - "127.0.0.1:7000:80"
+    depends_on:
+      - "db"
